--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,9 @@
 /.angular/cache
-/.DS_Store
+.DS_Store
 /node_modules
+# Firebase
+.firebase
+*-debug.log
+.runtimeconfig.json
+/src/environments
+/src/firebaseConfig.js
